--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="This is an api that gives a list of Countries.">
     <title>Countries</title>
   </head>
   <body>
