added a meta image

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
       href="/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
+    <meta name="Countries:card" content="summary_large_image" />
+    <meta name="Countries:image" content="./metaImage.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is an api that gives a list of Countries.">
+    <meta
+      name="description"
+      content="This is an api that gives a list of Countries."
+    />
     <title>Countries</title>
   </head>
   <body>
