--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       href="/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta name="Countries:card" content="summary_large_image" />
-    <meta name="Countries:image" content="./metaImage.JPG" />
+    <meta property="og:image" content="./metaImage.JPG" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="600" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
