--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
 
@@ -17,7 +17,7 @@
       href="/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta property="og:image" content="./metaImage.JPG" />
+    <meta property="og:image" content="/metaImage.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="600" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
